--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,9 @@ table {
 }
 
 .navbar {
-  background-color: rgb(109, 186, 238);
-  box-shadow: 3px 3px 3px solid #03a9f4;
+  background: #03a9f4;
+  border: 3px solid #03a9f4;
+  box-shadow: 3px 3px 3px solid;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -101,7 +102,7 @@ table {
 }
 
 .navbar .logo h1 span {
-  color: #03a9f4;
+  color: rgb(185, 12, 41);
 }
 
 .navbar #toggler {
@@ -186,7 +187,7 @@ table {
   transition: all ease-in-out;
   transform: rotateY("45deg");
   color: var(--hover-color);
-  text-shadow: 0 0 10px rgba(18, 247, 255, 0.9), 0 0 20px rgba(18, 247, 255, 0.9), 0 0 30px rgba(18, 247, 255, 0.9), 0 0 40px rgba(18, 247, 255, 0.9), 0 0 70px rgba(18, 247, 255, 0.9), 0 0 80px rgba(18, 247, 255, 0.9), 0 0 100px rgba(18, 247, 255, 0.9), 0 0 150px rgba(18, 247, 255, 0.9);
+  text-shadow: 0 0 10px rgba(255, 18, 97, 0.9), 0 0 20px rgba(225, 18, 97, 0.9), 0 0 30px rgba(225, 18, 97, 0.9), 0 0 40px rgba(225, 18, 97, 0.9), 0 0 70px rgba(225, 18, 97, 0.9), 0 0 80px rgba(225, 18, 97, 0.9), 0 0 100px rgba(225, 18, 97, 0.9), 0 0 150px rgba(225, 18, 97, 0.9);
 }
 
 .input {
@@ -250,7 +251,7 @@ table {
     left: -100%;
     transform: translateX(-50%);
     width: 100%;
-    background: #1b1b1b;
+    background: #03a9fe;
   }
   .navbar ul li {
     margin: 1.5rem 0;
@@ -278,7 +279,8 @@ table {
   padding-bottom: 20px;
 }
 .banner .row .banner-content .phoneheading h2 {
-  font-size: 25px;
+  font-size: 30px;
+  font-weight: bold;
   color: #03a9f4;
 }
 .banner .row .banner-content .textphone {
@@ -350,7 +352,7 @@ table {
 }
 .banner .row .banner-content .letter.out {
   transform: rotateX(90deg);
-  transition: 0.32s cubic-bezier(0.6, 0, 0.7, 0.2);
+  transition: 0.32s;
 }
 .banner .row .banner-content .letter.in {
   transition: 0.32s ease;
@@ -550,10 +552,15 @@ table {
   border-bottom-left-radius: 25%;
 }
 .about .container .row .TEXT {
+  padding-top: 2rem;
   gap: 50px;
 }
 .about .container .row .TEXT .skills-container {
-  padding-top: 40px;
+  padding-top: 2rem;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  transition: 4s;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   width: 400px;
@@ -561,7 +568,7 @@ table {
   position: relative;
   justify-content: center;
   align-items: center;
-  transition: 4s;
+  transition: 1s;
 }
 .about .container .row .TEXT .skills-container .mina {
   background: #03a9f4;
@@ -585,6 +592,9 @@ table {
 .about .container .row .TEXT .skills-container .skills-container .mina {
   box-shadow: inset 4px 4px 7px rgba(55, 84, 170, 0.15), inset -4px -4px 10px white, 0px 0px 2px rgba(255, 255, 255, 0.2);
   transition: box-shadow 0.2s ease-in-out;
+}
+.about .container .row .TEXT .mina .box {
+  padding: 16px;
 }
 .about .container .row .TEXT .css .box {
   text-align: right;
@@ -695,7 +705,7 @@ table {
   gap: 10px;
 }
 .services .container .row .card:before {
-  height: 220px;
+  height: 250px;
   width: calc(100% + 100px);
   content: "";
   position: absolute;
@@ -763,7 +773,7 @@ table {
 }
 .services .container .row .card article .pic {
   width: 150px;
-  height: 120px;
+  height: 150px;
   overflow: hidden;
   border-radius: 100%;
   margin: 20px 0;
@@ -968,6 +978,7 @@ table {
   font-weight: bold;
   text-align: center;
   padding-bottom: 3rem;
+  color: #03a9fe;
 }
 .projects .row {
   display: flex;
@@ -987,7 +998,7 @@ table {
   position: absolute;
   width: 95%;
   height: 95%;
-  background: #e0e7f1;
+  background: white;
   border-radius: 10px;
   z-index: 5;
   display: flex;
@@ -999,7 +1010,7 @@ table {
   overflow: hidden;
   padding: 20px;
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.5) 0px 18px 36px -18px inset;
+  box-shadow: rgba(76, 241, 241, 0.534) 0px 30px 60px -12px inset, rgba(41, 228, 241, 0.5) 0px 18px 36px -18px inset;
 }
 .projects .row .card1 h2, .projects .row span {
   position: absolute;
@@ -1009,7 +1020,7 @@ table {
   font-size: 5rem;
   font-weight: 800;
   pointer-events: none;
-  opacity: 0.5;
+  opacity: 0.8;
 }
 .projects .row span {
   top: 75%;
