--- a/css/style.scss
+++ b/css/style.scss
@@ -93,8 +93,9 @@ table {
 .navbar {
    // width: 100vw;
    // height: 74px;
-    background-color:rgb(109, 186, 238);
-    box-shadow: 3px 3px 3px solid #03a9f4;
+    background: #03a9f4;
+   border: 3px solid #03a9f4;
+    box-shadow: 3px 3px 3px solid ;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -107,7 +108,7 @@ table {
 	font-style: italic;
   }
   .navbar .logo h1 span {
-    color:#03a9f4;
+    color:rgb(185, 12, 41)
   }
   .navbar #toggler {
     display: none;
@@ -173,6 +174,8 @@ table {
   }
   .navbar ul {
     display: flex;
+   // background: 
+   // #04befe;
     list-style-type: none;
     transition: 0.4s ease-in-out;
   }
@@ -189,14 +192,14 @@ table {
     transition: all ease-in-out ;
     transform: rotateY('45deg');
     color: var(--hover-color);
-    text-shadow:  0 0 10px rgba(18,247, 255, 0.9),
-    0  0 20px rgba(18,247, 255, 0.9),
-    0 0 30px rgba(18,247, 255, 0.9),
-    0 0 40px rgba(18,247, 255, 0.9),
-    0 0 70px rgba(18,247, 255, 0.9),
-    0 0 80px rgba(18,247, 255, 0.9),
-    0 0 100px rgba(18,247, 255, 0.9),
-    0 0 150px rgba(18,247, 255, 0.9),
+    text-shadow:  0 0 10px rgba(255, 18, 97, 0.9),
+    0  0 20px rgba(225,18, 97, 0.9),
+    0 0 30px rgba(225,18, 97, 0.9),
+    0 0 40px rgba(225,18, 97, 0.9),
+    0 0 70px rgba(225,18, 97, 0.9),
+    0 0 80px rgba(225,18, 97, 0.9),
+    0 0 100px rgba(225,18, 97, 0.9),
+    0 0 150px rgba(225,18, 97, 0.9),
     ;
   }
   
@@ -265,7 +268,7 @@ table {
       transform: translateX(-50%);
   
       width: 100%;
-      background: #1b1b1b;
+      background: #03a9fe;
     }
     .navbar ul li {
       margin: 1.5rem 0;
@@ -290,12 +293,12 @@ table {
 .row{ //gap: 20px;
   padding: 20px 0;
   .banner-content{
-    //max-width: 600px;
 gap: 30px;
     .phoneheading{display: block;
       padding-bottom: 20px;
       h2{
-        font-size: 25px;
+        font-size: 30px;
+        font-weight: bold;
         color: #03a9f4;
       }
     }
@@ -391,7 +394,8 @@ p{
       }
       .letter.out{
           transform: rotateX(90deg);
-          transition: 0.32s cubic-bezier(0.6, 0, 0.7,0.2);
+          transition: 0.32s 
+          //cubic-bezier(0.6, 0, 0.7,0.2);
       }
       .letter.in{
          transition: 0.32s ease; 
@@ -619,18 +623,23 @@ p{
   }
  }
    .TEXT{
+    padding-top: 2rem;
    gap: 50px;
 
     .skills-container{
-      padding-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 400px;
-    gap: 20px;
+      padding-top: 2rem;
     position: relative;
     justify-content: center;
     align-items: center;
     transition: 4s;
+    display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 400px;
+  gap: 20px;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  transition: 1s;
 
     .mina {
       background:#03a9f4;
@@ -666,15 +675,15 @@ p{
   
 
   
-  
+  .mina .box{padding: 16px;}
   
   .css .box {
     text-align: right;
   }
   
-  // .js .box {
-  //   //margin-top: 40px;
-  // }
+.js .box {
+    //margin-top: 40px;
+  }
   
   .ng .box {
    // margin-top: 40px;
@@ -824,7 +833,7 @@ padding: 20px 0;
    // margin: 0 10px;
 
     &:before {
-      height: 220px;
+      height: 250px;
       width: calc(100% + 100px);
       content: "";
       position: absolute;
@@ -900,7 +909,7 @@ padding: 20px 0;
 
       .pic {
         width: 150px;
-        height: 120px;
+        height: 150px;
         overflow: hidden;
         border-radius: 100%;
         margin: 20px 0;
@@ -1155,6 +1164,7 @@ padding: 20px 0;
     font-weight: bold;
     text-align: center;
     padding-bottom: 3rem;
+    color: #03a9fe;
   }
     }
     .row{display: flex;padding:3rem o;
@@ -1175,7 +1185,7 @@ padding: 20px 0;
         position: absolute;
         width: 95%;
         height: 95%;
-        background: #e0e7f1;
+        background: white;
         border-radius: 10px;
         z-index: 5;
         display: flex;
@@ -1187,8 +1197,8 @@ padding: 20px 0;
         overflow: hidden;
         padding: 20px;
         cursor: pointer;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 60px -12px inset,
-          rgba(0, 0, 0, 0.5) 0px 18px 36px -18px inset;
+        box-shadow: rgba(76, 241, 241, 0.534) 0px 30px 60px -12px inset,
+          rgba(41, 228, 241, 0.5) 0px 18px 36px -18px inset;
       }
       .card1 h2, span {
         position: absolute;
@@ -1198,7 +1208,7 @@ padding: 20px 0;
         font-size: 5rem;
         font-weight: 800;
         pointer-events: none;
-        opacity: 0.5;
+        opacity: 0.8;
       }
       
       span {
